--- a/.golangci.yml
+++ b/.golangci.yml
@@ -30,6 +30,19 @@ linters-settings:
   dupl:
     # tokens count to trigger issue, 150 by default
     threshold: 100
+  stylecheck:
+    # Select the Go version to target.
+    # Default: 1.13
+    go: "1.17"
+    # https://staticcheck.io/docs/options#checks
+    checks: ["all", "-ST1003"]
+    # https://staticcheck.io/docs/options#dot_import_whitelist
+    dot-import-whitelist:
+      - fmt
+    # https://staticcheck.io/docs/options#initialisms
+    initialisms: ["ACL", "API", "ASCII", "CPU", "CSS", "DNS", "EOF", "GUID", "HTML", "HTTP", "HTTPS", "ID", "IP", "JSON", "QPS", "RAM", "RPC", "SLA", "SMTP", "SQL", "SSH", "TCP", "TLS", "TTL", "UDP", "UI", "GID", "UID", "UUID", "URI", "URL", "UTF8", "VM", "XML", "XMPP", "XSRF", "XSS"]
+    # https://staticcheck.io/docs/options#http_status_code_whitelist
+    http-status-code-whitelist: ["200", "400", "404", "500"]
   goconst:
     # minimal length of string constant, 3 by default
     min-len: 3
@@ -96,7 +109,6 @@ linters-settings:
         paramsOnly: true
       rangeValCopy:
         sizeThreshold: 32
-
 linters:
   disable-all: true
   enable:
